--- a/test/Makefile
+++ b/test/Makefile
@@ -4,7 +4,7 @@ CFLAGS= -Wall -Wextra -Wformat -std=c99 -g
 all:
 
 list:
-	$(CC) $(CFLAGS) -o test listtest.c ../src/slist.c
+	$(CC) $(CFLAGS) -o test listtest.c ../src/list.c
 
-key:
-	$(CC) $(CFLAGS) -o test keytest.c ../src/skey.c ../src/slist.c
+str:
+	$(CC) $(CFLAGS) -o test strtest.c ../src/sstring.c
